# fantasy-advisor

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml
.github/workflows/: backend_ci.yaml  ruff_lint.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f84adc8eb5f3_add_core_models.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py
backend/app/api/v1/routes/: auth.py  sleeper.py  users.py
backend/app/clients/: sleeper.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  base.py  enums.py  league.py  player.py  player_value.py  team.py  team_player.py  user.py
backend/app/schemas/: sleeper.py  user.py
backend/app/services/: auth_service.py  sleeper_service.py  user_service.py
backend/app/services/player_values/: base.py  provider_factory.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_register.py  test_security.py  test_sleeper.py  test_sleeper_client.py  test_users.py
backend/tests/data/: db_user.json  sleeper_league.json  sleeper_league_dynasty_ppr.json  sleeper_league_redraft_standard.json  sleeper_league_users.json  sleeper_league_users_multi.json  sleeper_league_users_sync.json  sleeper_leagues.json  sleeper_players.json  sleeper_rosters.json  sleeper_rosters_multi.json  sleeper_user.json
frontend/: package-lock.json  package.json  vite.config.ts
