[project]
name = "fantasy-advisor-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "pwdlib[argon2]>=0.3.0",
    "bcrypt>=5.0.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "UP", "B"]
ignore = ["UP037"]  # Keep quoted forward refs in Mapped[] to avoid circular imports

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
